Update NewTask/EditTask UI with Tags, Duedate (Date and time), Notification checkbox, Color