@@ -84,6 +84,19 @@
                 <version>0.0.3</version>
                 <configuration>
                     <mainClass>ntnu.idatt1002.App</mainClass>
+                    <options>
+                        <option> --add-opens </option>
+                        <option> java.base/java.lang.reflect=com.jfoenix </option>
+                        <option> --add-opens </option>
+                        <option> javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix </option>
+                        <option> --add-exports </option>
+                        <option> javafx.base/com.sun.javafx.binding=com.jfoenix </option>
+                        <option> --add-exports </option>
+                        <option> javafx.graphics/com.sun.javafx.stage=com.jfoenix </option>
+                        <option> --add-exports </option>
+                        <option> javafx.base/com.sun.javafx.event=com.jfoenix </option>
+                    </options>
+                    <commandlineArgs>-Xmx1024m</commandlineArgs>
                 </configuration>
             </plugin>
 
